--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "iso-639-1": "^2.1.15",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "iso-639-1": "^3.1.3",
     "mongoose": "^6.6.1"
   }
 }
